--- a/index.html
+++ b/index.html
@@ -26,22 +26,13 @@
     <section id="about">
       <div class="section-content">
         <h2>Bienvenidos</h2>
-        <p>Somos un pequeño emprendimiento familiar ofreciendo los siguientes servicios como acompañamiento, auxiliar en enfermería y cuidadores para la primera y tercera edad.</p>
-        <p>Nuestro sitio web es una oportunidad para las personas que buscan empleo y como tambien para aquellas que necesitan sus servicios.</p>
-      </div>
-    </section>
-
-    <section id="services">
-      <div class="section-content">
-        <h2>Sus Servicios</h2>
-        <ul>
+        <p> somos un pequño empredimiento familiar ofreciendo Nuestro sitio web como una oportunidad para aquellas personas que buscan empleo y como tambien para aquellas que necesitan sus servicios como.</p>
           <li>Acompañamiento</li>
           <li>Auxiliar en enfermería</li>
           <li>Cuidadores para la primera y tercera edad</li>
         </ul>
       </div>
     </section>
-
     <section id="why">
       <div class="section-content">
         <h2>¿Por qué surgió este emprendimiento?</h2>
@@ -61,7 +52,7 @@
       <div class="section-content">
         <h2>Información para Empleadores</h2>
         <ol>
-          <li>El servicio tiene un costo mínimo de 3.000 pesos por la recomendación de diez candidatos, de acuerdo con la descripción de la búsqueda solicitada.</li>
+          <li>El servicio tiene un costo mínimo de 3.000  pesos por la recomendación de diez candidatos, de acuerdo con la descripción de la búsqueda solicitada.</li>
           <li>Una vez que el empleador contrate al candidato seleccionado, asumirá toda la responsabilidad en cuanto al pago salarial y los acuerdos establecidos con el.</li>
           <li>Llevamos a cabo entrevistas con los candidatos preseleccionados a través de Zoom, y registramos sus datos personales, referencias y medios de contacto a su disposición.</li>
           <li>En caso de conflictos o falta de respeto hacia el personal seleccionado, el empleador será agregado a una lista de denegados permanentes.</li>
